--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "Your App Name",
-  "short_name": "App",
-  "description": "Your app description",
+  "name": "Outfit of the Day",
+  "short_name": "OOTD",
+  "description": "The fast fashion industry encourages impulsive buying, leading to overconsumption and massive textile waste. Many people purchase clothes without considering their long-term value, often discarding them after minimal use. We were inspired to create OOTD to shift this mindset by promoting thoughtful purchasing habits. OOTD helps users make mindful decisions with an AI-powered virtual try-on tool that reduces unnecessary purchases. At the same time, it provides a fun, engaging way to discover new clothes, get outfit inspiration, and explore sustainable fashion options—making conscious shopping both easy and exciting.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icon-192x192.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icon-512x512.jpg",
       "sizes": "512x512",
       "type": "image/png"
     }
